[package]
name = "matrix-animation-player"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "*", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
matrix-animation = { path = "../matrix-animation" }
sk9822-led = { path = "../sk9822-led" }