[package]
name = "sk9822-led"
version = "0.1.0"
edition = "2024"

[dependencies]
spidev = "0.5"
image = { version = "0.24", optional = true } 
matrix-animation = { path = "../matrix-animation" }

[dev-dependencies]
matrix-animation-player = { path = "../matrix-animation-player" }

[features]
converter = ["image"]

[[bin]]
name = "gif_convert"
path = "bin/gif_convert.rs"
required-features = ["converter"]